--- a/apps/angular-test-app/src/app/components/status-steps-demo/status-steps-demo.component.html
+++ b/apps/angular-test-app/src/app/components/status-steps-demo/status-steps-demo.component.html
@@ -1,14 +1,14 @@
 <h2>Horizontal Status Stepper Example</h2>
 <uxg-horizontal-status-stepper [currentStep]="3">
   <uxg-status-step>
-    <span step-title>Primary text</span>
-    Secondary text
+    <span step-title>Name of 1st step</span>
+    secondary text
   </uxg-status-step>
   <uxg-status-step>
-    <span step-title>No Secondary text</span>
+    <span step-title>Name of 2nd step</span>
   </uxg-status-step>
   <uxg-status-step>
-    <span step-title>Current Step text is bigger</span>
+    <span step-title>Current Step text</span>
     secondary text
   </uxg-status-step>
   <uxg-status-step>
@@ -16,7 +16,7 @@
     secondary text
   </uxg-status-step>
   <uxg-status-step>
-    <span step-title>Step 5</span>
+    <span step-title>Name of 5th step</span>
     secondary text
   </uxg-status-step>
   <uxg-status-step>
