--- a/apps/angular-test-app/src/app/components/status-steps-demo/status-steps-demo.component.html
+++ b/apps/angular-test-app/src/app/components/status-steps-demo/status-steps-demo.component.html
@@ -6,6 +6,7 @@
   </uxg-status-step>
   <uxg-status-step>
     <span step-title>Name of 2nd step</span>
+    secondary text
   </uxg-status-step>
   <uxg-status-step>
     <span step-title>Current Step text</span>
