slide toggle migration

--- a/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.scss
+++ b/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.scss
@@ -25,7 +25,7 @@
 .mat-icon + .mat-icon,
 .mat-card + .mat-card,
 .mat-button-toggle-group + .mat-button-toggle-group,
-.mat-slide-toggle + .mat-slide-toggle {
+.mat-mdc-slide-toggle + .mat-mdc-slide-toggle {
   margin-left: $uxg-spacing-2;
 }
 
