--- a/libs/angular-theme/lib/core/theming/_all-theme.scss
+++ b/libs/angular-theme/lib/core/theming/_all-theme.scss
@@ -22,7 +22,7 @@
 @use '../../list/list-theme';
 @use '../../menu/menu-theme';
 @use '../../sidenav/sidenav-theme';
-// @use '../../slide-toggle/slide-toggle-theme';
+@use '../../slide-toggle/slide-toggle-theme';
 // @use '../../table/table-theme';
 // @use '../../tabs/tabs-theme';
 @use '../../toolbar/toolbar-theme';
@@ -83,7 +83,7 @@
   @include list-theme.theme($theme);
   @include menu-theme.theme($theme);
   @include sidenav-theme.theme($theme);
-  // @include slide-toggle-theme.theme($theme);
+  @include slide-toggle-theme.theme($theme);
   // @include table-theme.theme($theme);
   // @include tabs-theme.theme($theme);
   @include toolbar-theme.theme($theme);
