--- a/libs/angular-theme/lib/core/layout/_flex.scss
+++ b/libs/angular-theme/lib/core/layout/_flex.scss
@@ -99,12 +99,14 @@ $fx-media-queries: (
 
 .flex-col-xs {
   @include flex-breakpoint('xs') {
+    display: flex;
     flex-direction: column;
   }
 }
 
 .flex-col-lt-md {
   @include flex-breakpoint('lt-md') {
+    display: flex !important;
     flex-direction: column;
   }
 }
@@ -124,6 +126,11 @@ $fx-media-queries: (
 .flex-row-lt-md {
   @include flex-breakpoint('lt-md') {
     flex-direction: row;
+    display: flex;
+
+    flex: 1 1 100%;
+    box-sizing: border-box;
+    max-width: 9%;
   }
 }
 
@@ -135,6 +142,7 @@ $fx-media-queries: (
 
 .flex-row-gt-xs {
   @include flex-breakpoint('gt-xs') {
+    display: flex;
     flex-direction: row;
   }
 }
