--- a/libs/angular-components/changelog/src/changelog.component.html
+++ b/libs/angular-components/changelog/src/changelog.component.html
@@ -12,13 +12,13 @@
     class="justify-center flex-col-lt-md"
     [class.layout-column]="displayVersion === 'top'"
   >
-    <div class="version" fxFlex="9" fxFlex.lt-md="30">
+    <div class="version" flex="9" flex.lt-md="30">
       <div *ngIf="displayVersion !== 'none'" class="version-id">v{{ release.version }}</div>
       <span [ngClass]="{ 'version-id': displayVersion === 'none', date: displayVersion !== 'none' }">{{
         release.date | date: 'longDate'
       }}</span>
     </div>
-    <div [ngClass]="{ 'first-release': first, 'last-release': last, 'release-detail': !first && !last }" fxFlex="90" fxFlex.md="90">
+    <div [ngClass]="{ 'first-release': first, 'last-release': last, 'release-detail': !first && !last }" flex="90" flex.md="90">
       <ng-container *ngFor="let category of release.categories; let i = index">
         <div class="category">
           <ng-container *ngIf="category.link; else noLink">
@@ -31,10 +31,10 @@
 
         <div *ngFor="let change of release.changes; first as firstChange; last as lastChange" class="change">
           <div *ngIf="change.category === category.label" class="flex-col-xs flex-row-gt-xs">
-            <div fxFlex="10" fxFlex.lt-lg="15" class="change-type">
+            <div flex="10" flex.lt-lg="15" class="change-type">
               <span class="{{ change.type | lowercase }} type uxg-caption">{{ change.type | titlecase }}</span>
             </div>
-            <div fxFlex="90" class="change-detail" [ngClass]="{ 'last-change': lastChange }">
+            <div flex="90" class="change-detail" [ngClass]="{ 'last-change': lastChange }">
               <div [innerHTML]="change.description" class="uxg-body-1 mb-3"></div>
             </div>
           </div>
