--- a/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.html
+++ b/apps/angular-test-app/src/app/components/ui-elements-demo/ui-elements-demo.component.html
@@ -404,7 +404,7 @@
   <h4 class="uxg-h4">Slide Toggle</h4>
   <div class="example-row slide-toggle-states-test">
     <mat-slide-toggle>Default</mat-slide-toggle>
-    <mat-slide-toggle checked="true" color="accent">Accent</mat-slide-toggle>
+    <mat-slide-toggle checked="true">Accent</mat-slide-toggle>
     <mat-slide-toggle checked="true" color="primary">Primary</mat-slide-toggle>
   </div>
 </div>
