--- a/libs/angular-components/global-search/src/_global-search.theme.scss
+++ b/libs/angular-components/global-search/src/_global-search.theme.scss
@@ -27,10 +27,10 @@
     .uxg-global-search-input-area {
       .uxg-global-search-input {
         .mat-mdc-form-field-focus-overlay {
-          background: fds.get-color-from-token(surface, 0.95, $theme);
+          background: fds.get-color-from-token(surface, 0.1, $theme);
         }
         .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-          background: fds.get-color-from-token(surface, 0.95, $theme);
+          background: fds.get-color-from-token(surface, 0.1, $theme);
         }
         .mat-mdc-form-field-label {
           @include color.color(on-surface);
@@ -68,13 +68,11 @@
       }
 
       .uxg-global-search-icon {
-        font-size: var(--fds-headline-1-font-size);
-        // font-size: mat.font-size($config, h1);
+        font-size: 60px;
         opacity: 0.75;
 
         @include fds.flex-breakpoint('xs') {
           font-size: var(--fds-headline-3-font-size);
-          // font-size: mat.font-size($config, h3);
         }
       }
     }
