--- a/libs/angular-components/global-search/src/global-search.component.scss
+++ b/libs/angular-components/global-search/src/global-search.component.scss
@@ -2,6 +2,8 @@
 
 $close-button-size: 48px;
 $close-button-size-small: 32px;
+$close-button-icon-size: 48px;
+$close-button-icon-small-size: 32px;
 
 .uxg-global-search-overlay-panel {
   width: 100%;
@@ -86,16 +88,41 @@ $close-button-size-small: 32px;
         margin: fds.$uxg-spacing-2;
         width: $close-button-size;
         height: $close-button-size;
+        // color:
+        // @include color.color(on-surface);
+
+        & > *[role='img'] {
+          width: $close-button-icon-size;
+          height: $close-button-icon-size;
+          font-size: $close-button-icon-size;
+
+          svg {
+            width: $close-button-icon-size;
+            height: $close-button-icon-size;
+          }
+        }
 
         @include fds.flex-breakpoint('xs') {
           width: $close-button-size-small !important;
           height: $close-button-size-small !important;
           font-size: $close-button-size-small !important;
+
+          & > *[role='img'] {
+            width: $close-button-icon-small-size;
+            height: $close-button-icon-small-size;
+            font-size: $close-button-icon-small-size;
+
+            svg {
+              width: $close-button-icon-small-size;
+              height: $close-button-icon-small-size;
+            }
+          }
         }
 
-        .mdc-icon-button__ripple::before {
+        .mat-mdc-button-touch-target {
           width: $close-button-size;
           height: $close-button-size;
+          font-size: $close-button-size !important;
 
           @include fds.flex-breakpoint('xs') {
             width: $close-button-size-small !important;
