--- a/libs/angular-components/global-search/src/global-search.component.scss
+++ b/libs/angular-components/global-search/src/global-search.component.scss
@@ -163,6 +163,32 @@ $close-button-icon-small-size: 32px;
           height: 100%;
           outline: none;
 
+          overflow: overlay;
+
+          ::-webkit-scrollbar,
+          &::-webkit-scrollbar {
+            width: 8px;
+            height: 8px;
+            background-color: rgba(0, 0, 0, 0);
+            border-radius: 100px;
+            -webkit-border-radius: 100px;
+
+            &:hover {
+              background-color: rgba(0, 0, 0, 0.09);
+            }
+          }
+
+          ::-webkit-scrollbar-thumb,
+          &::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 100px;
+            -webkit-border-radius: 100px;
+
+            &:active {
+              background: rgba(0, 0, 0, 0.61);
+            }
+          }
+
           @include fds.flex-breakpoint('lt-lg') {
             padding: 1rem 2rem 2rem;
           }
