--- a/libs/angular-components/global-nav/src/components/navbar/navbar.component.html
+++ b/libs/angular-components/global-nav/src/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="uxg-toolbar uxg-toolbar-elevated">
-  <button class="uxg-nav-header-button" mat-icon-button mat-primary color="primary" (click)="onMenuClick()" aria-label="Menu">
+  <button class="uxg-nav-header-button" mat-icon-button mat-primary color="primary" onclick="this.blur()" (click)="onMenuClick()" aria-label="Menu">
     <mat-icon>menu</mat-icon>
   </button>
 
